<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LogIn"
    android:background="@color/purple_500">

    <ImageView
        android:id="@+id/skylineimage"
        android:layout_width="1000dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        android:elevation="6dp"
        android:src="@drawable/skylinetime" />

    <TextView
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="10sp"
        />

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:textColorHint="@color/white"
        android:layout_height="50dp"
        android:layout_marginStart="10sp"/>

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/password"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10sp"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/ColorWhite"
        />

    <TextView
        android:id="@+id/registerNow"
        android:text="@string/click_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"/>





</LinearLayout>