<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConeysMenu">

    <RelativeLayout
        android:id="@+id/col_left_dessert_menu"
        android:layout_width="230dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"/>

    <ScrollView
        android:id="@+id/scroll_dessert_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="ExtraText">

            <RelativeLayout
                android:id="@+id/row_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="70dp"
                    android:backgroundTint="@color/ColorWhite"
                    app:backgroundTint="@color/ColorWhite"
                    android:src="@drawable/ic_baseline_home_24"
                    android:layout_marginTop="35dp"
                    />

                <TextView
                    android:id="@+id/tv_dessert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DessertsMenu"
                    android:textSize="40sp"
                    android:layout_margin="20dp"
                    android:textColor="@color/ColorWhite" />

            </RelativeLayout>

            /**  ----------Chili Cheese salad--------------------- */

            <RelativeLayout
                android:id="@+id/row_dessert_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_dessert_1"
                    android:layout_width="300dp"
                    android:layout_marginBottom="40dp"
                    android:layout_height="190dp"
                    android:layout_centerHorizontal="true"
                    app:cardCornerRadius="40dp"
                    app:cardBackgroundColor="@color/ColorWhite">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_dessert1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:layout_marginStart="70dp"
                            android:text="@string/Dessert1"
                            android:textSize="30sp"
                            android:textColor="@color/ColorAccent"/>
                        <TextView
                            android:id="@+id/tv_info_dessert_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_dessert1"
                            android:layout_marginStart="80dp"
                            android:textSize="14sp"
                            android:textColor="@color/purple_500"/>

                        <RatingBar
                            android:id="@+id/rating_dessert_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:isIndicator="false"
                            android:progressTint="@color/ColorYellow"
                            android:layout_below="@+id/tv_info_dessert_1"
                            android:layout_marginLeft="80dp"
                            style="@style/Widget.AppCompat.RatingBar.Indicator" />



                        <TextView
                            android:id="@+id/rating_price_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/rating_dessert_1"
                            android:layout_marginLeft="80dp"
                            android:text="@string/Cost1"
                            android:textSize="14sp"
                            android:textColor="@color/colorPrimary"/>




                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

                <ImageView
                    android:id="@+id/image_dessert1"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="-30dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:elevation="2dp"
                    android:src="@drawable/desertimg" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_dessert_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="6dp"
                    android:backgroundTint="@color/ColorWhite"
                    app:backgroundTint="@color/ColorWhite"
                    android:src="@drawable/ic_baseline_add_24"/>

            </RelativeLayout>



        </LinearLayout>
    </ScrollView>
</FrameLayout>